<?xml version="1.0"?>
<package>
  <name>calibration_service_test</name>
  <version>0.0.1</version>
  <description>Wrapper to perform offline slam</description>
  <maintainer email="chen-xx@sjtu.edu.cn">c xx</maintainer>
  <license>xxx</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
